[package]
name = "luciuz-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
http = "1"
tracing = "0.1"
luciuz-config = { path = "../luciuz-config" }
anyhow = "1"
